# bythebook

./: .gitignore  Cargo.toml  LICENSE  README.md
adapter_sql/: Cargo.toml
adapter_sql/src/: errors.rs  lib.rs
adapter_sql/src/models/: note.rs  organisation.rs  project.rs  user.rs
adapter_sql/src/repositories/: mod.rs  notes.rs  organisation.rs  projects.rs  users.rs
adapter_sql/tests/: mock.rs  prepare.rs
domain/: Cargo.toml
domain/docs/: CREATE_ORG_FLOW.md  org_flow.md
domain/src/: lib.rs
domain/src/entities/: mod.rs  note.rs  organisation.rs  project.rs  user.rs
domain/src/errors/: mod.rs
domain/src/interfaces/: mod.rs  note_repository.rs  organisation_repository.rs  project_repository.rs  user_repository.rs
domain/src/use_cases/: mod.rs  note.rs  organisation.rs  project.rs  user.rs
graphql_schema/: Cargo.toml
graphql_schema/src/: lib.rs  repo_provider.rs
graphql_schema/src/graphql/: mod.rs
graphql_schema/src/graphql/mutation/: auth.rs  organisation.rs
graphql_schema/src/graphql/query/: mod.rs  note.rs  project.rs
graphql_schema/src/graphql/types/: errors.rs  organisation.rs  user.rs
graphql_server/: Cargo.toml
graphql_server/src/: db.rs  lib.rs  repo_provider.rs
graphql_server/src/auth/: get_token.rs  mod.rs  password.rs  signin.rs  signup.rs
graphql_server/src/graphql/: schema.rs
graphql_server/src/graphql/mutation/: auth.rs  mod.rs  note.rs  organisation.rs  project.rs
graphql_server/src/graphql/query/: health.rs  note.rs  project.rs
graphql_server/src/graphql/types/: mod.rs  note.rs  organisation.rs  project.rs  user.rs
graphql_server/tests/: auth_signin.rs  test_note.rs  test_organisation.rs  test_project.rs  test_route_handlers.rs  test_user.rs
graphql_server/tests/common/: db.rs  helpers.rs  mod.rs  note.rs  organisation.rs
http_server/: Cargo.toml
http_server/src/: config.rs  graphql.rs  lib.rs  main.rs
http_server/src/auth/: add_session_user.rs  basic.rs  get_token.rs  mod.rs  refresh_token.rs  refresh_token_handler.rs  signin.rs  signup.rs  token.rs  types.rs  verify_user_password.rs
http_server/tests/: auth_signin.rs  test_note.rs  test_organisation.rs  test_route_handlers.rs  test_user.rs
http_server/tests/common/: db.rs  helpers.rs  note.rs  project.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20221117_000001_create_organisations_table.rs  m20221117_000002_create_users_table.rs  m20221117_000003_create_projects_table.rs  m20221117_000004_create_notes_table.rs  main.rs
src/: main.rs
