[package]
name = "by_the_book"
authors = [
  "Thomas Bleicher <tbleicher@gmail.com>",
  "Aaron Leopold <aaronleopold1221@gmail.com>",
]
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "adapter_sql", "graphql_server", "domain", "migration"]
default-members = ["graphql_server"]

[dependencies]
graphql-server = { path = "graphql_server" }
