[package]
name = "graphql_schema"
authors = ["Aaron Leopold <aaronleopold1221@gmail.com>"]
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.0", features = ["full"] }
async-graphql = "4.0.16"

chrono = "0.4.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.88"

adapter_sql = { path = "../adapter_sql" }
domain = { path = "../domain" }
