[package]
name = "graphql-server"
authors = ["Aaron Leopold <aaronleopold1221@gmail.com>"]
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.0", features = ["full"] }
assert-json-diff = "2.0.2"
async-graphql = "4.0.16"
async-graphql-actix-web = "4.0.16"
actix-http = "3.2.2"
actix-web = { version = "4.2.1", default-features = false, features = [
  "macros",
] }
dotenvy = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.88"

adapter_sql = { path = "../adapter_sql" }
domain = { path = "../domain" }
migration = { path = "../migration" }
