[package]
name = "http_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
assert-json-diff = "2.0.2"
async-graphql = "4.0.16"
async-graphql-actix-web = "4.0.16"
actix-http = "3.2.2"
actix-web = { version = "4.2.1", default-features = false, features = [
  "macros",
] }
actix-web-httpauth = "0.8.0"
chrono = "0.4.23"
dotenvy = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.88"
argonautica = "0.2.0"
jwt-simple = "0.11.2"
nanoid = "0.4.0"
futures-util = "0.3.25"

adapter_sql = { path = "../adapter_sql" }
domain = { path = "../domain" }
graphql_schema = { path = "../graphql_schema" }
migration = { path = "../migration" }
